--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/index.js",
-    "build": "webpack --config webpack.config.js --watch"
+    "build": "webpack --config webpack.config.js --watch",
+    "seed": "node database/seed.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/lukehatcher/carousel-service#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "faker": "^5.1.0",
     "mongoose": "^5.10.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
