--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/lukehatcher/carousel-service#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "jest-extended": "^0.11.5",
@@ -35,6 +36,7 @@
     "@babel/preset-react": "^7.12.5",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
+    "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.13.0",
@@ -47,6 +49,7 @@
     "jest": "^26.6.3",
     "jest-enzyme": "^7.1.2",
     "nodemon": "^2.0.6",
+    "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   },
