rename testing dir

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest-extended": "^0.11.5",
     "mongoose": "^5.10.13",
     "morgan": "^1.10.0",
+    "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   },
@@ -56,7 +57,7 @@
   "jest": {
     "verbose": true,
     "setupFilesAfterEnv": [
-      "<rootDir>/tests/setupTests.js",
+      "<rootDir>/__tests__/setupTests.js",
       "jest-extended"
     ]
   }
