fixed css imports and configured jest to work with css

--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
     "setupFilesAfterEnv": [
       "<rootDir>/__tests__/setupTests.js",
       "jest-extended"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(css)$": "<rootDir>/__tests__/__mocks__/styleMock.js"
+    }
   }
 }
