--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest-extended": "^0.11.5",
     "mongoose": "^5.10.13",
     "morgan": "^1.10.0",
+    "newrelic": "^7.0.2",
     "path": "^0.12.7",
     "pg": "^8.5.1",
     "prop-types": "^15.7.2",
